--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Hu YongTao's Homepage
+page-top-title: Hu YongTao
 top-section-bg-text: Marine Engineering
-home-subtitle: Sen Li&ensp;|&ensp;胡永涛
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+home-subtitle: Hu YongTao&ensp;|&ensp;胡永涛
+copyright-text: '&copy; Hu YongTao 2023-2024. All Rights Reserved.'
